kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: quay.linuxero-agrio.com.mx/linuxeroagrio/hello:v1
        name: hello
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8443
          name: https
